pushing new head meta

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+    <meta name="description" content="Citizen science management platform" />
+    <meta name="title" property="og:title" content="Scienteer" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://i.imgur.com/5DD8NLn.png?1" />
+    <meta name="description" property="og:description" content="Citizen science management platform" />
+    <meta name="author" content="Sam Bassong" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link rel="icon" href="https://i.imgur.com/5DD8NLn.png?1">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
