fixed head meta image

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Citizen science management platform" />
     <meta name="title" property="og:title" content="Scienteer" />
     <meta property="og:type" content="Website" />
-    <meta name="image" property="og:image" content="https://i.imgur.com/5DD8NLn.png?1" />
+    <meta name="image" property="og:image" content="https://i.imgur.com/KtQis6e.png" />
     <meta name="description" property="og:description" content="Citizen science management platform" />
     <meta name="author" content="Sam Bassong" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
