--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,13 +8,13 @@
     <meta name="description" content="Citizen science management platform" />
     <meta name="title" property="og:title" content="Scienteer" />
     <meta property="og:type" content="Website" />
-    <meta name="image" property="og:image" content="https://i.imgur.com/KtQis6e.png" />
+    <meta name="image" property="og:image" content="https://i.imgur.com/49u9nhh.pngQis6e.png" />
     <meta name="description" property="og:description" content="Citizen science management platform" />
     <meta name="author" content="Sam Bassong" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="icon" href="https://i.imgur.com/5DD8NLn.png?1">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Scienteer</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   </head>
